// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorPage /> renders correctly 1`] = `
<main
  role="main"
>
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <div
          className="fade alert-content alert alert-danger show"
          role="alert"
        >
          <span
            className="pgn__icon alert-icon"
          >
            <svg
              aria-hidden={true}
              aria-label=""
              fill="none"
              focusable={false}
              height={24}
              role="img"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            className="pgn__alert-message-wrapper"
          >
            <div
              className="alert-message-content"
            >
              <div
                className="alert-heading h4"
              >
                Error
              </div>
              Something went terribly wrong
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`<ErrorPage /> renders correctly for 403 errors 1`] = `
<main
  role="main"
>
  <div
    className="container-fluid"
  >
    <main
      role="main"
    >
      <div
        className="container-fluid mt-3"
      >
        <div
          className="text-center py-5"
        >
          <h1>
            403
          </h1>
          <p
            className="lead"
          >
            You do not have access to this page.
          </p>
          <p>
            For assistance, please contact the edX Customer Success team at
             
            <a
              className="default-link standalone-link"
              href="mailto:customersuccess@edx.org"
              onClick={null}
              target="_self"
            >
              customersuccess@edx.org
            </a>
            .
          </p>
        </div>
      </div>
    </main>
  </div>
</main>
`;

exports[`<ErrorPage /> renders correctly for 404 errors 1`] = `
<main
  role="main"
>
  <div
    className="container-fluid"
  >
    <main
      role="main"
    >
      <div
        className="container-fluid mt-3"
      >
        <div
          className="text-center py-5"
        >
          <h1>
            404
          </h1>
          <p
            className="lead"
          >
            Oops, sorry we can't find that page!
          </p>
          <p>
            Either something went wrong or the page doesn't exist anymore.
          </p>
        </div>
      </div>
    </main>
  </div>
</main>
`;
